<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_dieta_asignada"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/tvNombreDietaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_la_dieta"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tvDescripcionDietaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_de_la_dieta"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvArchivoDietaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/archivo_disponible"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnVerDietaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_dieta_pdf_o_imagen"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</ScrollView>