<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resultados del usuario"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvPesoResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peso corporal:"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvFechaResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_de_progreso"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <ListView
            android:id="@+id/listResultados"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Evolución del peso"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartPeso"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejercicios_completados"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <ListView
            android:id="@+id/listEjerciciosCompletados"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>

</ScrollView>